--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.2",
+    "flowbite": "^1.4.7",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-toggle-dark-mode": "^1.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.9.9"
   }
 }
